--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@adambubela/mdt-password-strength",
-  "version": "0.0.1",
-  "description": "Angular Material password streng ",
+  "name": "mdt-password-strength",
+  "version": "0.0.3",
+  "description": "AngularJs password strenght",
   "main": "mdt-password-strength.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
